Strings terminated by a newline instead of a closing quote should be handled as errors, not strings.  b=286262  r+sr=bzbarsky